...
        android:text="add a location"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_view_message" />

    <TextView
        android:id="@+id/text_location_info"
        android:layout_width="353dp"
        android:layout_height="337dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/container" />

    <Button
        android:id="@+id/button_view_ar"
        android:layout_width="wrap_content"
        android:layout_height="45sp"
        android:text="view ar"
        android:background="@drawable/rounded_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_button" />
...
