...
    <string name="app_name">UBC Explore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ip_address">http://20.228.168.55</string>
    <string name="apiKey">AIzaSyDugR-uQNHu0yZSOh91qAmnw6ELDbd6i8A</string>
    <string name="alertDialog1">Are you sure you want to go here?</string>
    <string name="viewARwarning">You haven\'t reached the location yet!</string>
</resources>
