...
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/locations"
        android:title="Locations"
        android:icon="@drawable/ic_locations_foreground"/>
    <item
        android:id="@+id/puzzles"
        android:title="Puzzles"
        android:icon="@drawable/ic_puzzles_foreground"/>
    <item
        android:id="@+id/camera"
        android:title="Camera"
        android:icon="@drawable/ic_camera_foreground"/>
...
